# 2D-Game-Engine

./: CMakeLists.txt  README.md  TheGrinnellCollegeExperience.sln  game  game.c  game.cpp  icon.svg.import  makefile  project.godot  sprintPlanning.txt  sprintReview.txt
assets/textures/MapTiles/: BrickPath1.png.import  BrickPath1ToSidewalk.png.import  BrickPath2.png.import  BrickPath3.png.import  BrickPath4.png.import  BrickWallBottom.png.import  BrickWallTop.png.import  CleanPath.png.import  CleanPathCornerGrass.png.import  CleanPathCornerToGrass.png.import  CleanPathSideGrass.png.import  CrackedPath.png.import  CrackedPathCornerGrass.png.import  CrackedPathCornerToGrass.png.import  CrackedPathInCorner.png.import  CrackedPathSideGrass.png.import  CrackedPathVertGrass.png.import  Grass.png.import  GrasstoBrickWall.png.import  shitty.png.import
assets/textures/characters/NPCs/: Fox Sprite Sheet.png.import
assets/textures/characters/animated/: mc.png.import  sprite_00.png.import  sprite_01.png.import  sprite_02.png.import  sprite_03.png.import  sprite_04.png.import  sprite_05.png.import  sprite_06.png.import  sprite_07.png.import  sprite_08.png.import  sprite_09.png.import  sprite_10.png.import  sprite_11.png.import
assets/textures/world/: ctr_wall1.pxz  ctr_wall2.pxz  ctr_wall3.pxz  ctr_wall4.pxz  grass_grey.pxz  grass_grey_old.pxz  grass_grey_old1.pxz
assets1/textures/menu/: Menu.pxz
save_data/: save.txt
scenes/: AnimatedSprite2D.gd  npc_example.tscn  pla4476.tmp  player_example.tscn
scripts/: AnimatedSprite2D.gd  DialogPopup.gd  camera.gd  npc_example.gd
(+1 files in other folders)
